edited rows in the leader board table

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Lite</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore iusto voluptatum sunt deserunt earum voluptate, id necessitatibus, magni, placeat quos assumenda laborum illo corrupti repellat eos ab sapiente perspiciatis in.</p>
         <input type="text">
         <button id="start">Start</button>
-        <div>
+        <div id="Leader_board">
             <h2>Leader Board</h2>
             <table>
                 <tr>
@@ -23,11 +24,31 @@
                     <th>Highest Score</th>
                     <th>Attempts</th>
                 </tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
-                <tr></tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
             </table>
         </div>
     </main>
