--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
             </table>
         </div>
     </main>
+    <div id="question">
+        <div>
+            <span>Score: </span>
+            <span id="score"></span>
+        </div>
+        <div>
+            <span>Question: </span>
+            <span id="question"></span>
+        </div>
+        <div id="question_text"></div>
+        <div class="row1">
+            <span class="answer1"></span>
+            <span class="answer2"></span>
+        </div>
+        <div class="row2">
+            <span class="answer3"></span>
+            <span class="answer4"></span>
+        </div>
+        <button class="next">Next Question</button>
+    </div>
 </body>
 
 </html>
