edited button for skiping question

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <span id="answer4" class="answer"><p></p></span>
             </div>
         </div>
-        <button id="next">Next Question</button>
+        <button id="next">Skip Question</button>
     </div>
 </body>
 
